sensor_values/log/build_2021-04-09_19-33-52/sensor_values/stderr.log
  File "/home/paul/sensor_values/install/sensor_values/lib/python3.8/site-packages/sensor_values/values_output.py", line 40
    rclpy.spin(test_node\)
                         ^
SyntaxError: unexpected character after line continuation character

